# fri-kzg-verifier

./: .gitignore  Cargo.toml  READEME.md  README.md
src/exec/: fri_2_kzg_solidity.rs  kzg_setup.rs  mock_verifier.rs  mod.rs
tests/: test_equip_kzg_halo2_solidity.rs  test_verifier_solidity.rs
